Mon Oct 17 18:03:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Invocation_Base.h:
          Removed some not needed forward declarations

Mon Oct 17 09:52:05 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* Makefile.am:

          Enabled building "performance-tests" subdirectory.

	* configure.ac:

	  Configure all Makefile.am's in performance-tests subdirectories.

	* performance-tests/Makefile.am:
	* performance-tests/Anyop/Makefile.am:
	* performance-tests/Callback/Makefile.am:
	* performance-tests/Cubit/Makefile.am:
	* performance-tests/Cubit/TAO/Makefile.am:
	* performance-tests/Cubit/TAO/DII_Cubit/Makefile.am:
	* performance-tests/Cubit/TAO/IDL_Cubit/Makefile.am:
	* performance-tests/Cubit/TAO/MT_Cubit/Makefile.am:
	* performance-tests/Latency/Makefile.am:
	* performance-tests/Latency/AMH_Single_Threaded/Makefile.am:
	* performance-tests/Latency/AMI/Makefile.am:
	* performance-tests/Latency/Collocation/Makefile.am:
	* performance-tests/Latency/DII/Makefile.am:
	* performance-tests/Latency/DSI/Makefile.am:
	* performance-tests/Latency/Deferred/Makefile.am:
	* performance-tests/Latency/Single_Threaded/Makefile.am:
	* performance-tests/Latency/Thread_Per_Connection/Makefile.am:
	* performance-tests/Latency/Thread_Pool/Makefile.am:
	* performance-tests/Memory/Makefile.am:
	* performance-tests/Memory/IORsize/Makefile.am:
	* performance-tests/Memory/Single_Threaded/Makefile.am:
	* performance-tests/POA/Makefile.am:
	* performance-tests/POA/Create_Reference/Makefile.am:
	* performance-tests/POA/Demux/Makefile.am:
	* performance-tests/POA/Implicit_Activation/Makefile.am:
	* performance-tests/POA/Object_Creation_And_Registration/Makefile.am:
	* performance-tests/Pluggable/Makefile.am:
	* performance-tests/Protocols/Makefile.am:
	* performance-tests/RTCorba/Makefile.am:
	* performance-tests/RTCorba/Multiple_Endpoints/Makefile.am:
	* performance-tests/RTCorba/Multiple_Endpoints/Common/Makefile.am: