@@ -4,8 +4,13 @@
 feature(ec_typed_events) {
   macros   += TAO_HAS_TYPED_EVENT_CHANNEL
 
+  idlflags += -Wb,stub_export_macro=TAO_Event_Export -Wb,stub_export_include=orbsvcs/CosEvent/event_export.h -Wb,skel_export_macro=TAO_Event_Skel_Export -Wb,skel_export_include=orbsvcs/CosEvent/event_skel_export.h
+
   IDL_Files {
     CosTypedEventComm.idl
     CosTypedEventChannelAdmin.idl
   }
+
+  idlflags -= -Wb,stub_export_macro=TAO_Event_Export -Wb,stub_export_include=orbsvcs/CosEvent/event_export.h -Wb,skel_export_macro=TAO_Event_Skel_Export -Wb,skel_export_include=orbsvcs/CosEvent/event_skel_export.h
+
 }
